hphp/hack/test/typecheck/override/override_attr_14.php
<?hh

interface IFoo {
  <<__Override>>
  public function bar(): void;
}
